@@ -20,7 +20,7 @@
           (dir-key-value lf "EditFlags") *eflags*)
     (with-dir-key-open (ic lf "DefaultIcon" :direction :output)
       (setf (dir-key-value ic "") "%SystemRoot%\\system32\\SHELL32.dll,41"))
-    (with-dir-key-open (cc lf "shell\\Compile_with_CLISP" :direction :output)
+    (with-dir-key-open (cc lf "Shell\\Compile_with_CLISP" :direction :output)
       (setf (dir-key-value cc "") "Compile with CLISP")
       (with-dir-key-open (cmd cc "command" :direction :output)
         (setf (dir-key-value cmd "")
@@ -33,16 +33,18 @@
           (dir-key-value ff "EditFlags") *eflags*)
     (with-dir-key-open (ic ff "DefaultIcon" :direction :output)
       (setf (dir-key-value ic "") "%SystemRoot%\\system32\\SHELL32.dll,21"))
-    (with-dir-key-open (ex ff "Shell\\Execute_with_CLISP" :direction :output)
-      (setf (dir-key-value ex "") "Execute with CLISP")
-      (with-dir-key-open (cmd ex "command" :direction :output)
-        (setf (dir-key-value cmd "")
-              (concatenate 'string *clisp-cmd* " \"%1\""))))
-    (with-dir-key-open (lo ff "Shell\\Load_into_CLISP" :direction :output)
-      (setf (dir-key-value lo "") "Load into CLISP")
-      (with-dir-key-open (cmd lo "command" :direction :output)
-        (setf (dir-key-value cmd "")
-              (concatenate 'string *clisp-cmd* " -i \"%1\""))))))
+    (with-dir-key-open (sh ff "Shell" :direction :output)
+      (setf (dir-key-value sh "") "Execute_with_CLISP")
+      (with-dir-key-open (ex sh "Execute_with_CLISP" :direction :output)
+        (setf (dir-key-value ex "") "Execute with CLISP")
+        (with-dir-key-open (cmd ex "command" :direction :output)
+          (setf (dir-key-value cmd "")
+                (concatenate 'string *clisp-cmd* " \"%1\""))))
+      (with-dir-key-open (lo sh "Load_into_CLISP" :direction :output)
+        (setf (dir-key-value lo "") "Load into CLISP")
+        (with-dir-key-open (cmd lo "command" :direction :output)
+          (setf (dir-key-value cmd "")
+                (concatenate 'string *clisp-cmd* " -i \"%1\"")))))))
 
 (defun add-mem-file (dkey)
   (format t "associating CLISP with MEM files under ~s~%" (dir-key-path dkey))
@@ -51,11 +53,13 @@
           (dir-key-value mf "EditFlags") *eflags*)
     (with-dir-key-open (ic mf "DefaultIcon" :direction :output)
       (setf (dir-key-value ic "") "%SystemRoot%\\system32\\SHELL32.dll,21"))
-    (with-dir-key-open (ex mf "Shell\\Run_with_CLISP" :direction :output)
-      (setf (dir-key-value ex "") "Run with CLISP")
-      (with-dir-key-open (cmd ex "command" :direction :output)
-        (setf (dir-key-value cmd "")
-              (concatenate 'string *clisp-base-cmd* " \"%1\""))))))
+    (with-dir-key-open (sh mf "Shell" :direction :output)
+      (setf (dir-key-value sh "") "Run_with_CLISP")
+      (with-dir-key-open (ex sh "Run_with_CLISP" :direction :output)
+        (setf (dir-key-value ex "") "Run with CLISP")
+        (with-dir-key-open (cmd ex "command" :direction :output)
+          (setf (dir-key-value cmd "")
+                (concatenate 'string *clisp-base-cmd* " \"%1\"")))))))
 
 
 (with-dir-key-open (c1 :win32 "HKEY_CLASSES_ROOT")
